--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 --color-success : #004b23;
 --color-warning : #007200;
 --color-danger : #c94b4b;
---color-danger-variant :rgba(247,88,66,0.4);
+--color-danger-variant: rgb(79, 78, 78);
 --color-white : #fff;
 --color-light :rgba(255,255,255,0.7);
 --color-black: #000;
@@ -33,55 +33,61 @@
     background:var(--color-white);
 }
  /*.............styling- header-----*/
- header {
+ .menu-header{
+    background-color:rgb(250, 244, 255);
     height: auto;
     width: 100%;
-    background-color: red;
-    border-style: dotted;
-    
- }
-nav {
-    text-align: right;
-    margin-right: 180px;
- }
- .logo{
+    padding-bottom: 5%;
+  
+  }
+  header{
+    margin: 0 0 0 1px;
+    min-width: 100vw;
+    background-color: transparent;
+  }
+  header nav{
+    margin: 0 0 0 1px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .logo{
     display: flex;
     align-items: center;
     justify-content: flex-start;
-}
-.logo-img{
-    height: auto;
-    width: 100px;
-}
-div h2 {
-    font-weight: 600;
-    color: #008000;
-    margin: 0 6px;
-}
-
- nav ul {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+    overflow: hiddden;
+    
   }
-nav ul li {
+  .logo a:hover {
+    background-color: transparent;
+  }
+  
+  .logo-img{
+    max-height: 30%;
+    max-width: 30%
+  }
+  nav ul li{
     display: inline;
-    margin: 8px;
-    padding: 0 4px;
-    font-weight: 300px;
-    color: var(--color-black)
-    
-
-}
-nav ul li a{
-    color: var(--color-black);
- }
-
- nav ul li a:hover{
+    margin: 0 15px;
+  }
+  
+  nav ul li a{
+    text-decoration: none;
+    color: rgb(79, 78, 78);
+    font-weight: 800;
+    font-size: 20px;
+    transition: 300ms ease-in;
+  }
+  nav ul li a:hover{
     color: var(--color-danger);
- }
-    
- 
+  }
+  nav ul li a.active {
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px 32px;
+    font-size: 16px;
+    margin: 4px 2px;
+  } 
 
 
     
