--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,9 +321,6 @@
   .about-3 h1{
     text-align: center;
     font-size:45px
-    padding:3% 0;
-    
-    
   }
   .about-3-right h1{
     text-align: left;
@@ -361,5 +358,53 @@
   #text3 {
     margin-top: 3%;
   }
+
+  /* footer styling */
+  footer{
+    height: 60vh;
+    background-color: rgb(250, 244, 255);
+    padding: 0 100px 100px 0;
+  }
+  .footer-box{
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .footer-links{
+    display: flex;
+    flex-direction: column;
+    padding: 10px 30px;
+  }
+  .footer-about{
+    width: 40%;
+    color: var(--color-black);
+    margin-left: 120px;
+  }
+  .footer-links h3{
+    margin-bottom: 10px;
+    color:var(--color-black);
+    font-size: 17px;
+  }
+  .footer-links a{
+    color: var(--color-black);
+    text-decoration: none;
+    margin: 6px 0;
+    text-align: left;
+    font-size: 12px;
+    font-weight: 550;
+    transition: 0.3ms ease-in-out;
+  }
+  
+  .footer-links a:hover{
+    color: black;
+  }
+  .end{
+    text-align: center;
+    color:var(--color-black);   
+  }
+  
+  
+   
     
  
