--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,6 +433,59 @@
     text-align: center;
     color:var(--color-black);   
   }
+
+  /* style the form; sign up form*/
+  .form-section {
+    clear: left;
+    background: url("../images/alovera1.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 900px;
+ }
+ .signup-form {
+    margin:150px 10% 0 0; 
+    color: #fff;
+    background-color: rgba(60, 60, 60, 0.6);
+    max-width: 400px;
+    position: absolute;
+    left: 10%;
+    padding: 30px;
+ }
+ .signup-form h2 {
+    color: #fafafa;
+   margin-bottom: 20px
+        
+ }
+ .text-input{
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin:5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+ }
+ .text-input:hover {
+    border-color: #238665;
+ }
+ .join-button {
+    margin-top:20px;
+    border-radius:2px;
+    padding: 15px 32px 15px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color:var(--color-btn);
+    color: #fafafa;
+    display: block;
+ }
+ .join-button:hover {
+    background-color: #fafafa;
+    color: #f16c6b;
+    
+ }
+ 
+ 
+ 
   
   
    
