--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,7 +374,7 @@
   /* footer styling */
   footer{
     width: 100%;
-    height: 80vh;
+    height: auto;
     background-color: rgb(250, 244, 255);
     padding: 0 100px 100px 0;
   }
@@ -418,10 +418,15 @@
     background-color: transparent;
     text-align: center;
     padding-top: 3;
-    
-    
-  
   }
+    
+    .footer-medias{
+      padding-top: 40%;
+      text-align: center;
+      background-color: grey;
+    }
+  
+ 
   i{
   font-size: 20px;
   width: 30px;
@@ -450,18 +455,14 @@
    
 }
 
-  .end{
-    text-align: center;
-    color:var(--color-black); 
-    padding-top: 5%;  
-  }
+
 
   /* style the form; sign up form*/
   .form-section {
     clear: left;
     width: 100%;
     height: auto;
-    background-color: #238665;
+    background-color: transparent;
   }
     .sig-image {
       float: right;
