--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,6 +525,10 @@
   text-align: center;
   background: white;
 }
+.header img {
+  width: 100%;
+  height: 700px;
+}
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
