--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -540,16 +540,39 @@
 .left-blog1 {
   float: left;
   width: 40%;
-  height: auto;
+  height: 80%;
   margin-left: 15%;
+}
+.blog1-img {
+  background-color: #aaa;
+  width: 80%;
+  padding: 20px;
+}
+.blog1-img  img{
+  width: 100%;
+  height: 90%;
+
 }
 .left-blog2 {
   float: right;
   width: 30%;
-  height: auto;
+  height: 70px;
   margin-right: 15%;
+  
 }
+.blog2-img {
+  background-color: #aaa;
+  width: 100%;
+  margin-top: 45%; 
+  padding: 20px 20px;
 
+}
+.blog2-img img {
+  width: 100%;
+  height: 40%;
+  
+  
+}
 .left-blogcenter {
   float: left;
   width: 70%;
