--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,6 +578,16 @@
   width: 70%;
   margin-left: 15%;
 }
+.blog3-img {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px 20px;
+
+}
+.blog3-img img {
+  width: 100%;
+  height: 50%;
+}
 
 
 
@@ -586,6 +596,7 @@
   float: left;
   width: 25%;
   padding-left: 20px;
+  margin-top: 0;
 }
 
 /* Fake image */
@@ -594,14 +605,29 @@
   width: 100%;
   padding: 20px;
 }
+.blog-imgme  {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+  top: 20%;
+}
+.blog-imgme img {
+  width: 100%;
+  margin-top: -30%;
+
+}
+
 
 /* Add a card effect for articles */
 .main-blog {
   background-color: white;
   padding: 20px;
-  margin-top: 20px;
-}
+  margin-top: 0;
 
+}
+.main-blogright{
+margin-top: -115%;
+}
 /* Clear floats after the columns */
 .row-blog:after {
   content: "";
