--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -595,8 +595,9 @@
 .rightcolumn-blog {
   float: left;
   width: 25%;
+  margin-top: -33%;
   padding-left: 20px;
-  margin-top: 0;
+  
 }
 
 /* Fake image */
@@ -605,6 +606,11 @@
   width: 100%;
   padding: 20px;
 }
+.blog-img img {
+  width: 100%;
+  height: 50%;
+}
+
 .blog-imgme  {
   background-color: #aaa;
   width: 100%;
@@ -613,7 +619,9 @@
 }
 .blog-imgme img {
   width: 100%;
-  margin-top: -30%;
+  height: 100%;
+  
+  
 
 }
 
@@ -626,7 +634,7 @@
 
 }
 .main-blogright{
-margin-top: -115%;
+
 }
 /* Clear floats after the columns */
 .row-blog:after {
