--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -541,9 +541,9 @@
   margin-left: 15%;
 }
 .blog1-img {
-  background-color: #aaa;
+  background-color: var(--color-white);
   width: 80%;
-  padding: 20px;
+  padding: 7px;
 }
 .blog1-img  img{
   width: 100%;
@@ -558,10 +558,10 @@
   
 }
 .blog2-img {
-  background-color: #aaa;
+  background-color:var(--color-white);
   width: 100%;
   margin-top: 45%; 
-  padding: 20px 20px;
+  padding: 7px;
 
 }
 .blog2-img img {
@@ -576,17 +576,15 @@
   margin-left: 15%;
 }
 .blog3-img {
-  background-color: #aaa;
+  background-color: var(--color-white);
   width: 100%;
-  padding: 20px 20px;
+  padding: 7px;
 
 }
 .blog3-img img {
   width: 100%;
   height: 50%;
 }
-
-
 
 /* Right column */
 .rightcolumn-blog {
@@ -599,9 +597,9 @@
 
 /* Fake image */
 .blog-img {
-  background-color: #aaa;
+  background-color: var(--color-success);
   width: 100%;
-  padding: 20px;
+  padding: 7x;
 }
 .blog-img img {
   width: 100%;
@@ -613,13 +611,12 @@
   width: 100%;
   padding: 20px;
   top: 20%;
+
 }
 .blog-imgme img {
   width: 100%;
   height: 100%;
   
-  
-
 }
 
 
@@ -638,6 +635,71 @@
   content: "";
   display: table;
   clear: both;
+}
+/* animation of the blog*/
+.blog1-img {
+  position: relative;
+  width: 90%;
+}
+.blog2-img{
+position: relative;
+width: 100%;
+}
+.blog3-img{
+  position: relative;
+  width: 100%;
+
+}
+.imag {
+  display: block;
+  width: 100%;
+  height: 90%;
+}
+.imagleft {
+  display: block;
+  width: 30%;
+  height: 70%;
+}
+.imagcenter{
+  display: block;
+  width: 100%;
+  height: 50%; 
+}
+
+.effekt{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color:var(--color-success);
+}
+
+.blog1-img:hover .effekt {
+  opacity: 1;
+}
+.blog2-img:hover .effekt {
+  opacity: 1;
+}
+.blog3-img:hover .effekt{
+
+ opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 /* Footer */
