--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,29 +457,19 @@
   /* style the form; sign up form*/
   .form-section {
     clear: left;
-    width: 100%;
-    height: auto;
-    background-color: transparent;
-  }
-    .sig-image {
-      float: right;
-      width:35%;
-      height: 40%;
-      padding-right: 15%;
-      padding-top: 7%;
-      
-
-    }
-    
- 
+    background: url("../images/formbg.png4.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 1000px;
+ }
  .signup-form {
-    margin:150px 10% 0 5%; 
+    margin:250px 10% 0 0; 
     color: #fff;
-    background-color: rgba(60, 60, 60, 0.6);
+    background-color: rgba(12, 156, 55, 0.815);
     max-width: 400px;
     position: absolute;
-    left: 10%;
-    padding: 40px;
+    left: 40%;
+    padding: 30px;
  }
  .signup-form h2 {
     color: #fafafa;
@@ -492,19 +482,20 @@
     width: 100%;
     height: 25px;
     margin:5px 0 20px 0;
-    border: 1px solid #fafafa;
+    border: 2px solid #fafafa;
     border-radius: 2px;
  }
  .text-input:hover {
-    border-color: #238665;
+    border-color: #a06b09;
  }
  .join-button {
     margin-top:20px;
     border-radius:2px;
     padding: 15px 32px 15px 32px;
     text-align: center;
+    margin-left: 30%;
     font-size: 100%;
-    background-color:var(--color-btn);
+    background-color:#21aa14;
     color: #fafafa;
     display: block;
  }
@@ -513,6 +504,8 @@
     color: #f16c6b;
     
  }
+ 
+ 
 
  /* style Blog page*/
  /* Header/Blog Title */
