--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,9 @@
 --color-primary : #006400;
 --color-success : #004b23;
 --color-warning : #007200;
---color-danger : #c94b4b;
+--color-hover : #c94b4b;
 --color-danger-variant: rgb(79, 78, 78);
+--color-danger-span: orange;
 --color-white : #fff;
 --color-light :rgba(255,255,255,0.7);
 --color-black: #000;
@@ -76,18 +77,17 @@
   }
   
   nav ul li a{
-    text-decoration: none;
-    color: rgb(79, 78, 78);
+    color: var(--color-success);
     font-weight: 800;
     font-size: 20px;
     transition: 300ms ease-in;
   }
   nav ul li a:hover{
-    color: var(--color-danger);
+    color: var(--color-hover);
   }
   nav ul li a.active {
     background-color: var(--color-btn);
-    color: white;
+    color: var(--color-white);
     padding: 15px 32px;
     font-size: 16px;
     margin: 4px 2px;
@@ -113,7 +113,6 @@
     text-align: justify;
     margin-left: 60px;
     font-size: 45px;
-    /*padding: 25px 5px; */
     padding-top: 15%;
     line-height: normal;
   }
@@ -123,7 +122,7 @@
     margin-top:30px;
   }
   span{
-    color:orange;
+    color: var(--color-danger-span);
     font-size: 20px;
     font-style: bold;
   }
@@ -132,19 +131,17 @@
     margin-top: 50px;
   }
   .btn {
-      background-color: var(--color-btn); /* Green */
-      border: none;
-      color: white;
+      background-color: var(--color-btn); 
+      color: var(--color-white);
       padding: 15px 32px;
       text-align: center;
-      text-decoration: none;
       display: inline-block;
       font-size: 16px;
       margin: 4px 2px;
       cursor: pointer;
     }
   .btn:hover{
-    color: orange;
+    color: var(--color-hover);
   }
   .main-right{
     padding-top: 8%;
@@ -167,7 +164,6 @@
     width:100%;
     height: auto;
     margin-top: 1%;
-    background-color:transparent;
   }
   .about-1{
     width: 100%;
@@ -175,14 +171,13 @@
     margin-bottom: 5%;
     width: auto;
     height: 400px;
-    background-color: transparent;
    }
     
   .about-img{
     float: left;
     width: 50%;
     margin-top: 3%;
-    background-color: transparent;
+    
   } 
   .image-left {
     display: block;
@@ -192,16 +187,19 @@
       margin-left: auto;
       margin-right: 5px;
       padding:3px 3px;
-      border:6px solid #fff;
+      border:6px solid var(--color-white);
       box-shadow: 10px 10px 10px grey;
   }
+  .about-img img:hover {
   
-   
+      transform: scale(1.1); /* zoom animation for this box */
+    }
+
   .about-right {
     float: right;
     width: 50%;
     margin-top: 3%;
-    background-color: transparent
+
   }
   .about-right h1{
     text-align: left;
@@ -221,28 +219,27 @@
     padding:1% 15%;
   }
   .btn-about {
-    background-color: var(--color-btn);/* Green */
-    border: none;
-    color: white;
+    background-color: var(--color-btn);
+    color: var(--color-white);
     padding: 15px 32px;
     text-align: left;
-    text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
   }
+  .btn-about:hover{
+    color: var(--color-hover);
+  }
   
-  /* center about*/
+  /* center about styling*/
   .about-2{
     width: 100%;
     height: 400px;
-    background-color: transparent;
    }
   .about-center{
     float: left;
     width: 50%;
-    background-color: transparent;
    }
    .about-center h1{
     text-align: left;
@@ -265,9 +262,8 @@
   }
   
   .btn-about {
-    background-color: var(--color-btn); /* Green */
-    border: none;
-    color: white;
+    background-color: var(--color-btn); 
+    color: var(--color-white);
     padding: 15px 32px;
     text-align: left;
     display: inline-block;
@@ -279,7 +275,6 @@
   .about-img-center{
     float: right;
     width: 50%;
-    background-color: transparent;;
   } 
   
   .image-right-center {
@@ -290,6 +285,11 @@
       margin-right: auto;
       border:6px solid #fff;
       box-shadow: 10px 10px 10px grey;
+
+  }
+  .about-img-center img:hover{
+      transform: scale(1.1); /* zoom animation for this box */
+  
   }
   
   /* about 3 styling */
@@ -350,16 +350,17 @@
     padding:1% 15%;
   }
   .btn-3-about {
-    background-color: var(--color-btn); /* Green */
-    border: none;
-    color: white;
+    background-color: var(--color-btn);  
+    color: var(--color-white);
     padding: 15px 32px;
     text-align: left;
-    text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+  }
+  .btn-3-about:hover{
+    color: var(--color-hover);
   }
   #img3{
     margin-top: 3%;
@@ -408,7 +409,7 @@
   }
   
   .footer-links a:hover{
-    color: rgb(110, 16, 16);
+    color: var(--color-hover);
   }
   
   
@@ -418,18 +419,14 @@
   
   .fa-facebook {
     background: #3B5998;
-    color: white;
+    color: var(--color-white);
   }
   
   .fa-twitter {
     background: #55ACEE;
-    color: white;
+    color: var(--color-white);
   }
   
-  .fa-google {
-    background: #dd4b39;
-    color: white;
-  }
   
   .fa-linkedin {
     background: #007bb5;
@@ -450,7 +447,6 @@
     margin: 1%;
     margin-left: 15%;
     
-    
   }
 
   /* style the form; sign up form*/
@@ -459,48 +455,55 @@
     background: url("../images/formbg.png4.jpg");
     background-size: cover;
     background-position: center;
-    height: 1000px;
+    height: 900px;
+    border-radius: 30px;
+    margin: 3% 8% 5% 8% ;
+    border:6px ;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
  }
  .signup-form {
-    margin:250px 10% 0 0; 
-    color: #fff;
-    background-color: rgba(12, 156, 55, 0.815);
+    margin:160px 10% 0 0; 
+    color:var(--color-white);
+    background-color: rgba(2, 37, 12, 0.815);
     max-width: 400px;
     position: absolute;
     left: 40%;
     padding: 30px;
+    text-align: center
  }
  .signup-form h2 {
-    color: #fafafa;
-   margin-bottom: 20px
+    color:var(--color-white);
+   margin-bottom: 20px;
+   text-align: center;
         
  }
  .text-input{
     background: transparent;
-    color: #fafafa;
+    color: var(--color-white);
     width: 100%;
     height: 25px;
     margin:5px 0 20px 0;
-    border: 2px solid #fafafa;
+    border: 2px solid var(--color-white);
     border-radius: 2px;
  }
  .text-input:hover {
-    border-color: #a06b09;
+    border-color: var(--color-hover);
  }
- .join-button {
+ .form-button {
     margin-top:20px;
     border-radius:2px;
     padding: 15px 32px 15px 32px;
     text-align: center;
     margin-left: 30%;
     font-size: 100%;
-    background-color:#21aa14;
-    color: #fafafa;
+    background-color:var(--color-btn);
+    color: var(--color-white);
     display: block;
  }
- .join-button:hover {
-    background-color: #fafafa;
-    color: #f16c6b;   
+ .form-button:hover {
+    background-color: var();
+    color: var(--color-hover);   
  }
  .message{
   width:100%;
