--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,40 +698,211 @@
  /* Responsiveness*/
  /* media quieries--*/
 
- /*For Mobile devices: 320px-480px.*/
-@media screen and  (min-width: 320px) and (max-width: 480px) {
-  .menu-header{
-    background-color: blue
-  }
-}
-
-
-/* --for medium screen sizes 481px — 768px: iPads, Tablets.*/
-
-@media screen and (min-width: 481px) and (max-width: 768px) {
-  .menu-header{
-    background-color:red;
-
-  }
-}
  
 
+ /* --for medium screen sizes from 1200px  wide and down--*/
 
-/* for labtop, small screen 769px — 1024px*/
+@media screen and (max-width: 1200px) {
+  .menu-header{
+    background-color: rgb(231, 231, 241)
+  }
+  #main {
+    /* text-align: justify; */
+    margin-left: 60px;
+    /* font-size: 45px; */
+    padding-top: 15%; 
+    /* line-height: normal; */
+	  margin-top: 70px;
+  }
 
-@media screen and (min-width: 760px) and (max-width: 1042px) {
+  #para{
+    text-align: justify;
+    margin-left: 65px;
+    margin-top:30px;
+	font-size:14px;
+  }
+  .main-left{
+    float: left; 
+    width: 40%;
+  }
+
+  .text-block {
+    text-align: center;
+    font-size: 14px;
+  }
+}
+/* --for medium screen sizes from 950px  wide and down*/
+
+@media screen and (max-width: 950px){
+  .menu-header{
+    background-color:rgb(66, 45, 163);
+
+    }
+  
+  .main-left{
+    float: left; 
+    width: 30%;
+   }
+  .main-right{
+    
+	  margin-top:8%;
+	   }
+
+	   .main-right img {
+		  width:50%;
+		  margin-left:15%;
+		  
+	  }
+
+    .btn {
+      display: none;
+      border: none;
+    background:none;
+    }
+  
+  .image-left {
+    
+    width: 70%;
+    
+}
+.about-center{
+  float: left;
+  width: 60%;
+ }
+
+.about-img-center{
+    float: right;
+    width: 40%;
+  } 
+  .image-right-center {
+    display: block;
+      width: 80%;
+    }  
+    .sec-about h1 {
+    
+      font-size: 19px; 
+  } 
+  .about-1{
+    width: 100%;
+    /* margin-top: 5%; */
+    margin-bottom: 5%;
+    width: auto;
+    height: 400px;
+   }
+
+   .about-center h1{
+    
+    
+    margin-top: -11%;
+  }
+
+  .about-center p {
+   
+	  margin-top: -1%;
+  }
+
+  .image-right-center {
+  
+    
+      
+      margin-top: -16%;
+}
+
+.about-2{
+  width: 100%;
+  height: 300px;
+ }
+
+ .footer-links a{
+  
+  font-size: 13px;
+}
+/*agin*/
+
+.text-block{
+  width: 33%;
+  height: 20%;
+  position: absolute;
+  bottom: 320px;
+  right: 20px;
+  margin-right: 10%;
+  
+}
+
+
+.header-blog img {
+  width: 100%;
+  height: auto;
+  margin-top: 5%;
+  margin-left: 3%;
+  
+} 
+
+.b-img{
+	width: 90%;
+	border-radius: 10px;
+	margin-left:3%;
+	margin-top:-40%;
+}
+.heading1{
+	margin-top: 20px;
+	font-size: 14px;
+	margin-left:3%;
+}
+.box-1 p {
+	margin-left:3%;
+}
+.text-block{
+  width: 40%;
+  height: 17%;
+  bottom: 320px;
+  right: 20px;
+  margin-right: 10%;
+
+}
+
+  
+#main {
+  text-align: justify;
+  margin-left: 65px;
+  padding-top: 14%;
+  font-size:29px;
+  font-weight:600;
+  line-height: 27px;
+
+}
+
+.about-center p {
+
+  margin-left:27%;
+  font-size:14px;
+}
+
+.b-img-1{
+	width: 100%;
+	height: 160px;
+	border-radius: 10px;
+	margin-top: -1000%;
+	
+}
+
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+/* -- for small screen sizes 800px  wide and down---*/
+@media screen and (max-width:800px) {
   .menu-header{
     background-color: yellow;
   }
+
 }
-
-
-/*1025px — 1200px: Desktops, large screens.*/
-
-@media  screen and (min-width: 1025px) and (max-width: 1400px) {
-  .menu-header{
-    background-color: green;
-  }
-}
-
-
