Fix: compress all the page background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,7 +452,7 @@
   /* style the form; sign up form*/
   .form-section {
     clear: left;
-    background: url("../images/formbg.png4.jpg");
+    background: url("../images/form-bg.jpg");
     background-size: cover;
     background-position: center;
     height: 900px;
