--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,23 +36,23 @@
  /*.............styling- header-----*/
  .menu-header{
     background-color:rgb(250, 244, 255);
-    height: 130px;
-    width: 100%;
+    /*height: 130px; */
+    max-width: 100vw;
     padding-bottom: 5%;
   
   }
   header{
     margin: 0 0 0 1px;
     min-width: 100vw;
-    height: 98px;
+    max-height: 12.25vh;
   }
 
   header nav{
-     margin: 0 0 0 1px;
+     margin: 0 0 0 0.0625;
     display: flex;
     align-items: center;
-    width: 100%;
-    height: 130px;
+    width: 100vw;
+    height: 16.25vh;
     background-color:transparent;
      justify-content: space-around;
   }
@@ -73,13 +73,13 @@
   }
   nav ul li{
     display: inline;
-    margin: 0 15px;
+    margin: 0 1rem;
   }
   
   nav ul li a{
     color: var(--color-success);
     font-weight: 800;
-    font-size: 20px;
+    font-size: 1.25rem;
     transition: 300ms ease-in;
   }
   nav ul li a:hover{
@@ -88,15 +88,15 @@
   nav ul li a.active {
     background-color: var(--color-btn);
     color: var(--color-white);
-    padding: 15px 32px;
-    font-size: 16px;
-    margin: 4px 2px;
+    padding: 1rem 2rem;
+    font-size: 1rem;
+    margin: 0.25rem 0.125;
   } 
 
 /* stling the main section */
 .main{
   
-    width: 100%;
+    width: 100vw;
     height: auto;
     background-color: rgb(250, 244, 255);
     overflow: hidden;
@@ -106,38 +106,38 @@
   }
   .main-left{
     float: left; 
-    width: 50%
+    width: 50vw;
   }
   
   #main {
     text-align: justify;
-    margin-left: 60px;
-    font-size: 45px;
+    margin-left: 3.75rem;
+    font-size: 2.8125rem;
     padding-top: 15%;
     line-height: normal;
   }
   #para{
     text-align: justify;
-    margin-left: 65px;
-    margin-top:30px;
+    margin-left: 4.0625rem;
+    margin-top:1.875rem;
   }
   span{
     color: var(--color-danger-span);
-    font-size: 20px;
+    font-size: 1.25rem;
     font-style: bold;
   }
   .button{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 3.125rem;
   }
   .btn {
       background-color: var(--color-btn); 
       color: var(--color-white);
-      padding: 15px 32px;
+      padding: 1rem 2rem;
       text-align: center;
       display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
+      font-size: 1rem;
+      margin: 0.25 0.125rem;
       cursor: pointer;
     }
   .btn:hover{
@@ -149,19 +149,19 @@
   /* about styling---*/
 .sec-about{
     text-align: center;
-    padding-top: 1%;
-    width: 100%;
+    padding-top: 0.0625rem;
+    max-width: 100%;
     height: auto;
   }
   .sec-about h1 {
     padding-top: 1%;
-    font-size: 30px;
+    font-size: 1.875;
   }
   .sec-about h3 {
-    font-size: 30px;
+    font-size: 1.875;
   }
   .about-wrap{
-    width:100%;
+    max-width:100%;
     height: auto;
     margin-top: 1%;
   }
@@ -170,7 +170,7 @@
     margin-top: 5%;
     margin-bottom: 5%;
     width: auto;
-    height: 400px;
+    height: 50vh;
    }
     
   .about-img{
@@ -180,13 +180,13 @@
     
   } 
   .image-left {
-    display: block;
+    display: flex;
       width: 50%;
       height: 100%;
       margin-top: 3%;
       margin-left: auto;
-      margin-right: 5px;
-      padding:3px 3px;
+      margin-right: 0.3125;
+      padding: 0.1875 0.1875;
       border:6px solid var(--color-white);
       box-shadow: 10px 10px 10px grey;
   }
@@ -204,15 +204,14 @@
   .about-right h1{
     text-align: left;
     color: var(--color-btn);
-    margin-top: 20px;
-    margin-left: 5px;
-    margin-right: auto;
-    padding:3px 3px;
+    margin-top: 1.25rem;
+    margin-left: 0.3125;
+    padding: 0.1875 0.1875rem;
     line-height: normal;
   }
   .about-right p {
     text-align: left;
-    margin-left: 5px;
+    margin-left: 0.3125rem;
   }
   .button-about {
     text-align: left;
@@ -221,11 +220,11 @@
   .btn-about {
     background-color: var(--color-btn);
     color: var(--color-white);
-    padding: 15px 32px;
+    padding: 1rem 2rem;
     text-align: left;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 1rem;
+    margin: 0.25 0.125;
     cursor: pointer;
   }
   .btn-about:hover{
@@ -234,12 +233,12 @@
   
   /* center about styling*/
   .about-2{
-    width: 100%;
-    height: 400px;
+    width: 100vw;
+    height: 50vh;
    }
   .about-center{
     float: left;
-    width: 50%;
+    width: 50vw;
    }
    .about-center h1{
     text-align: left;
@@ -247,7 +246,7 @@
     margin-top: 9%;
     margin-left: 40%;
     margin-right: auto;
-    padding:3px 3px;
+    padding:0.1875 0.1875rem;
     line-height: normal
   }
    
@@ -258,29 +257,29 @@
   .button-center {
     text-align: right;
     margin-right:35%;
-    padding-top: 2%;
+    padding-top: 0.125rem;
   }
   
   .btn-about {
     background-color: var(--color-btn); 
     color: var(--color-white);
-    padding: 15px 32px;
+    padding: 1rem 2rem;
     text-align: left;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 1rem;
+    margin: .25 0.125rem;
     cursor: pointer;
   }
     
   .about-img-center{
     float: right;
-    width: 50%;
+    width: 50vw;
   } 
   
   .image-right-center {
     display: block;
-      width: 50%;
-      height: 100%;
+      max-width: 50%;
+      max-height: 100%;
       margin-top: 10%;
       margin-right: auto;
       border:6px solid #fff;
@@ -295,11 +294,11 @@
   /* about 3 styling */
   
   .about-3{
-    width: 100%;
+    width: 100vw;
     height: auto;
     margin-top: 3%;
     margin-bottom: 3%;
-    height: 400px;
+    height: 50vw;
     background-color: transparent;
    }
     
@@ -312,12 +311,12 @@
   
   .image-3-left {
     display: block;
-      width: 50%;
-      height: 100%;
+      max-width: 50%;
+      max-height: 100%;
       margin-top: 3%;
       margin-left: auto;
-      margin-right: 2px;
-      padding:3px 3px;
+      margin-right: 0.125rem;
+      padding: 0.1875rem  0.1875rem;
       border:6px solid #fff;
       box-shadow: 10px 10px 10px grey;
   }
@@ -330,20 +329,20 @@
   }
   .about-3 h1{
     text-align: center;
-    font-size:45px
+    font-size: 2.8125;
   }
   .about-3-right h1{
     text-align: left;
     color: var(--color-btn);
-    margin-top: 20px;
-    margin-left: 5px;
+    margin-top: 1.25rem;
+    margin-left: 0.3125;
     margin-right: auto;
-    padding:3px 3px;
+    padding: 0.1875 0.1875;
     line-height: normal;
   }
   .about-3-right p {
     text-align: left;
-    margin-left: 5px;
+    margin-left: 0.3125;
   }
   .button-3-about {
     text-align: left;
@@ -352,11 +351,11 @@
   .btn-3-about {
     background-color: var(--color-btn);  
     color: var(--color-white);
-    padding: 15px 32px;
+    padding: 1rem 2rem;
     text-align: left;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 1rem;
+    margin: 0.25 0.125rem;
     cursor: pointer;
   }
   .btn-3-about:hover{
@@ -372,7 +371,7 @@
 
   /* footer styling */
   footer{
-    width: 100%;
+    width: 100vw;
     height: auto;
     background-color: rgb(250, 244, 255);
    
@@ -386,17 +385,17 @@
   .footer-links{
     display: flex;
     flex-direction: column;
-    padding: 10px 30px;
+    padding: 0.625 1.875rem;
   }
   .footer-about{
-    width: 40%;
+    width: 40vw;
     color: var(--color-black);
-    margin-left: 120px;
+    margin-left: 7,5rem;
   }
   .footer-links h3{
     margin-bottom: 10px;
     color:var(--color-black);
-    font-size: 20px;
+    font-size: 1.25rem;
   }
   .footer-links a{
     color: var(--color-black);
@@ -455,7 +454,7 @@
     background: url("../images/form-bg.jpg");
     background-size: cover;
     background-position: center;
-    height: 900px;
+    height: 56.25rem;
     border-radius: 30px;
     margin: 3% 8% 5% 8% ;
     border:6px ;
@@ -463,37 +462,39 @@
     
  }
  .signup-form {
-    margin:160px 10% 0 0; 
+    margin:10rem 10% 0 0; 
     color:var(--color-white);
     background-color: rgba(2, 37, 12, 0.815);
-    max-width: 400px;
+    max-width: 25vw;
     position: absolute;
     left: 40%;
-    padding: 30px;
-    text-align: center
+    padding: 1.8rem;
+    text-align: center;
  }
  .signup-form h2 {
     color:var(--color-white);
-   margin-bottom: 20px;
+   margin-bottom: 1.25rem;
    text-align: center;
         
  }
  .text-input{
+  
     background: transparent;
     color: var(--color-white);
     width: 100%;
-    height: 25px;
-    margin:5px 0 20px 0;
+    height: 3.125%;
+    margin:0.3rem 0 1.25rem 0;
     border: 2px solid var(--color-white);
     border-radius: 2px;
  }
+ 
  .text-input:hover {
     border-color: var(--color-hover);
  }
  .form-button {
-    margin-top:20px;
+    margin: top 1.25rem;;
     border-radius:2px;
-    padding: 15px 32px 15px 32px;
+    padding: 1rem 2rem 1rem 2rem;
     text-align: center;
     margin-left: 30%;
     font-size: 100%;
@@ -516,13 +517,13 @@
  /* w3*/
 .header-blog {
   position: relative;
-  width: 95%;
-  height: 800px;
+  width: 95vw;
+  height: 100vh;
   text-align: center;
   background-color: transparent;
   border: 3px solid transparent;
   border-radius: 30px;
-  top: 4px;
+  top: 0.25rem;
   
   
  }
@@ -540,35 +541,35 @@
   width: 23%;
   height: 30%;
   position: absolute;
-  bottom: 320px;
-  right: 20px;
+  bottom: 20rem;
+  right: 1.25rem;
   margin-right: 30%;
   background-color: var(--color-primary);
   opacity: 0.5;
   color: var(--color-white);
-  padding-left: 20px;
-  padding-right: 20px
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 .text-block {
   text-align: center;
-  font-size: 17px;
+  font-size: 1.1rem;
 }
 .text-block h2 {
   font-weight: bold;
 }
 .text-b { 
-  width: 100%;
-  height: 70px;
+  width: 100vw;
+  height: 70vh;
   margin-top: 2%;
   text-align: center;
 }
 .text-b {
-  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 .header-blog img {
   width: 85%;
-  height: 630px;
+  height: 78.75%;
   margin-top: 5%;
   margin-left: 8%;
   border-radius: 20px;
@@ -577,15 +578,15 @@
 .section-blog{
   width: 100%;
   height: auto;
-  margin-top: 800px;
+  
   background-color: transparent;
 }
 .clearfix{
 	clear: both;
 }
 .container{
-	width: 1140px;
-	max-width: 100%;
+	
+	width: 80%;
 	margin: 0 auto;
 }
 .col-div-6{
@@ -594,47 +595,47 @@
 }
 .heading{
 	color: var(--white);
-    font-size: 40px;
-    letter-spacing: 1px;
+    font-size: 2.5rem;
+    letter-spacing: 0.6rem;
     margin-top: 14%;
 }
 
 .ban-img{
-	width: 250px;
-	margin-bottom:-50px;
+	width: 16rem;
+	margin-bottom: 3.125rem;
 }
 .b-img{
 	width: 100%;
 	border-radius: 10px;
 }
 .heading1{
-	margin-top: 20px;
-	color: var(--main);
-	font-size: 14px;
+	margin-top: 1.25rem;
+	color: var(--color-white);
+	font-size: 0.9rem;
 	text-transform: uppercase;
 }
 .lr-box{
-	padding: 10px 20px;
+	padding: 0.625rem  1.25rem;
 
 }
 .b-img-1{
 	width: 100%;
-	height: 160px;
+	height: 20vh;
 	border-radius: 10px;
-	margin-top: 7px;
+	margin-top: 0.43rem;
 }
 .blog-heading-1{
-	font-size: 20px;
+	font-size: 1.25rem;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
     color: var(--black);
 }
 .line{
 	    width: 100%;
-	    margin-top: 15px;
+	    margin-top: 0.9rem;
     border: none;
-    height: 1px;
-    background: #ddd;
+    height: 0.063rem;
+    background: var(--color-white);
 }
 .lr-box:hover{
 	opacity: 0.5;
@@ -648,7 +649,7 @@
 .box-2{
 	width: 28.5%;
 	float: left;
-	margin: 25px;
+	margin: 1.7rem;
 }
 .box-2:hover{
 	opacity: 0.5;
@@ -657,10 +658,10 @@
 
 /* Footer */
 .footer {
-  padding: 20px;
+  padding: 1.25rem;
   text-align: center;
-  background: #ddd;
-  margin-top: 20px;
+  background: var(--color-white);
+  margin-top: 1.25rem;
 }
 /* syling thank you Message*/
 .thank-u  {
