Fix:media query for contact page,

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,10 +415,10 @@ margin-left: 20%;
 
 
 @media screen and (max-width: 320px) {
-  .blog-column , .blog-column-testimony{
+  .blog-column , .blog-column-testimony, .blog{
       
     float: left;
-    width: 100%;
+    width: 30%;
   
   }
 
